<resources>
    <string name="app_name">checkDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="app_dashboard">Dashboard</string>
    <string name="app_Upload">Upload</string>
    <string name="app_Setting">Setting</string>
    <string name="app_communicate">Communicate</string>
    <string name="app_share">Share</string>
    <string name="app_help">Help</string>
    <string name="close">Close</string>
</resources>
